# syncstar

./: .gitignore  README.md  pyproject.toml  renovate.json  syncstar.spec  tox.ini
.github/workflows/: base.yml  lint.yml  main.yml  test.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: core.jsx  main.jsx
frontend/src/comp/: code.jsx  devs.jsx  diag.jsx  disk.jsx  door.jsx  down.jsx  feed.jsx  file.jsx  free.jsx  hand.jsx  item.jsx  note.jsx  peak.jsx  prog.jsx  rssu.jsx  talk.jsx  task.jsx
frontend/src/cssc/: core.css
frontend/src/features/: data.jsx  dict.jsx  icon.jsx  part.jsx  sync.jsx
syncstar/: __init__.py  auth.py  base.py  dyno.py  feed.py  main.py  make.py  page.py  root.py  task.py  util.py  view.py
syncstar/config/: __init__.py  images.yml  manifest.py  standard.py
syncstar/frontend/: home.html
syncstar/frontend/assets/: index-0okg7c7l.js  index-BIs6EWm2.js  index-Br_Q1xJr.js  index-CT6Q7wjq.js  index-CfJCO2Hx.js  index-CojGS-LJ.js  index-CybHYhgF.css  index-K32N5Zm9.js  index-Sft6Laa3.js  index-VJOR5PJC.js  index-jasp-4Wh.css
syncstar/frontend/static/css3/: core.css
syncstar/frontend/static/jscn/: core.js
syncstar/frontend/template/: home.html
syncstar/system/: endpoint.service  worker.service
test/: __init__.py  conftest.py  test_base.py  test_isos.py  test_keep.py  test_main.py  test_meet.py  test_task.py
test/base/: __init__.py  test_disk_size.py  test_list_disk.py
test/data/: images.yml
test/main/: test_base_main.py  test_comd_apim.py  test_comd_cell.py  test_comd_main.py  test_conf_apim.py  test_conf_cell.py  test_conf_main.py  test_main_help.py
test/meet/: test_meet_apim.py  test_meet_cell.py
test/root/: __init__.py  test_auth.py  test_home.py  test_kick.py  test_read.py  test_root_auth.py  test_root_home.py  test_root_news.py  test_root_read.py  test_root_sync.py  test_scan.py
test/task/: __init__.py  test_task_conf.py  test_task_long.py  test_task_main.py
