[tool.poetry]
name = "syncstar"
version = "0.1.0a1"
description = "Guest operated service for creating bootable USB storage devices at any community conference kiosk"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "	AGPL-3.0-or-later"
maintainers = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/gridhead/syncstar"
repository = "https://github.com/gridhead/syncstar"
documentation = "https://github.com/gridhead/syncstar/blob/main/README.md"
keywords = [""]
classifiers= [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Operating System",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
click = ">=8.0.0,<9"
flask = ">=3.0.0"
pyudev = "^0.24.3"
pyyaml = "^6.0.1"
celery = "^5.4.0"
redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3 || ^8.0.0"
pytest-cov = "^4.1.0 || ^5.0.0"
ruff = "^0.2.0 || ^0.3.0"
tox = "^4.0.0"
vcrpy = "^5.1.0 || ^6.0.0"
pytest-recording = "^0.13.0"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101", "E701", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
syncstar = "syncstar.main:main"