[tool.poetry]
name = "syncstar"
version = "0.2.0"
description = "Service for creating bootable USB storage devices at community conference kiosks"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "AGPL-3.0-or-later AND MIT"
maintainers = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/gridhead/syncstar"
repository = "https://github.com/gridhead/syncstar"
documentation = "https://github.com/gridhead/syncstar/wiki"
keywords = ["conference", "fedora"]
classifiers= [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Topic :: System :: Operating System",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Mass Storage",
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = ">=8.0.0,<9"
flask = ">=3.0.0"
pyudev = "^0.24.0"
pyyaml = "^6.0.1"
celery = "^5.3.0"
redis = "^5.0.4"
feedparser = "^6.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3 || ^8.0.0"
pytest-cov = "^4.1.0 || ^5.0.0 || ^6.0.0"
ruff = "^0.2.0 || ^0.3.0 || ^0.6.0 || ^0.7.0 || ^0.8.0"
tox = "^4.0.0"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"syncstar/*" = ["S105"]
"test/*" = ["S101", "E701", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
syncstar = "syncstar.main:main"
